--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -71,7 +71,7 @@ map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=o
 map cmd+, launch --allow-remote-control --title="kitty.conf" --type=tab sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#38F273" active_fg="#050F63" inactive_fg="#38F273" inactive_bg="#030D43"; exec /opt/homebrew/bin/nvim ~/config/kitty/kitty.conf'
 map kitty_mod+0 launch --hold env PATH="/opt/homebrew/bin:$PATH" sh -c 'media search'
 map kitty_mod+1 launch --hold env PATH="/opt/homebrew/bin:$PATH" sh -c 'fzf-tablature'
-map cmd+1 launch --type=background "/opt/homebrew/bin/kitty @ set-colors --match id:$KITTY_WINDOW_ID tab_active_bg=#FFA500"
+map ctrl+t>1 launch --type=background sh -c 'kitty @ set-tab-color --match id:$KITTY_WINDOW_ID active_bg=#FFA500'
 map cmd+ctrl+, debug_config
 map cmd+shift+g show_last_command_output
 map ctrl+\ launch --location=neighbor --cwd=current yazi
@@ -106,9 +106,12 @@ map kitty_mod+shift+l neighboring_window right
 map kitty_mod+shift+n new_os_window_with_cwd
 map kitty_mod+shift+r set_tab_title
 map kitty_mod+shift+t new_tab !neighbor
+map kitty_mod+n new_tab !neighbor
 map kitty_mod+t new_tab_with_cwd !neighbor
 map kitty_mod+w close_window
-map kitty_mod+| split_window -v --cwd=current
+# map kitty_mod+| split_window -v --cwd=current
+map kitty_mod+| launch --type=window --cwd=current -m=split:h
+map kitty_mod+- launch --type=window --cwd=current -m=split:v
 map shift+cmd+w close_os_window
 map super+f toggle_fullscreen
 
