--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -11,7 +11,7 @@ r playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
 Meta+d script-binding replace-playlist
 #Meta+s playlist-clear ; loadfiles "${path}/.*" ; playlist-remove "${path}/${filename}" ; show-text "Playing ${path:name} (${playlist-count} clips)"
 
-Meta+j script-binding random_jump
+j script-message random_jump
 
 # Edit with losslesscut
 Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
@@ -38,7 +38,7 @@ s cycle sub
 SHIFT+Enter script-binding play-random
 
 #Shift+J script-binding jump-to-random-file
-Shift+J script-message-to playlist_manager random
+#Shift+J script-message-to playlist_manager random
 
 l seek 3 exact
 Shift+L seek 10 exact
@@ -51,7 +51,6 @@ Ctrl+h seek -20 exact
 # Skip to the next clip
 ENTER playlist-next
 Meta+RIGHT playlist-next
-j playlist-next
 
 # Skip to the previous clip
 Shift+ENTER playlist-prev
