--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -66,5 +66,7 @@ osd-status-msg="Time: ${time-pos} / ${duration} | Speed: ${speed}x"
 # Subtitle defaults
 slang=en
 
+mute=yes
+
 # Optional IPC for scripts (uncomment if using scripts/remote control)
 #input-ipc-server=/tmp/mpv-socket
