--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -110,8 +110,8 @@ map kitty_mod+n new_tab !neighbor
 map kitty_mod+t new_tab_with_cwd !neighbor
 map kitty_mod+w close_window
 # map kitty_mod+| split_window -v --cwd=current
-map kitty_mod+| launch --type=window --cwd=current -m=split:h
-map kitty_mod+- launch --type=window --cwd=current -m=split:v
+map ctrl+| launch --type=window --cwd=current -m=split:h
+map ctrl+- launch --type=window --cwd=current -m=split:v
 map shift+cmd+w close_os_window
 map super+f toggle_fullscreen
 
