--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -58,10 +58,10 @@ enabled_layouts all
 placement_strategy center
 initial_window_width 1200
 initial_window_height 800
-remember_window_size no
+remember_window_size yes
 window_border_width 2
-window_margin_width 20 15
-window_padding_width 20 15
+window_margin_width 10 10
+window_padding_width 10 10
 draw_minimal_borders yes
 
 # KEYBINDINGS
