--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -39,7 +39,7 @@ tab_bar_align left
 tab_bar_min_tabs 2
 tab_separator " "
 tab_switch_strategy previous
-tab_bar_margin_width 16.0
+tab_bar_margin_width 20.0
 tab_activity_symbol !
 tab_fade 0
 tab_title_template " {title.split('/')[-1].strip().lower()[:8]}{sup.index} "
@@ -60,8 +60,8 @@ initial_window_width 1200
 initial_window_height 800
 remember_window_size yes
 window_border_width 2
-window_margin_width 10 10
-window_padding_width 10 10
+window_margin_width 8 8
+window_padding_width 8 8
 draw_minimal_borders yes
 
 # KEYBINDINGS
@@ -69,12 +69,12 @@ map kitty_mod+a set_tab_color #FFA500
 map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
 #map cmd+, launch --title "kitty.conf" --type=tab /opt/homebrew/bin/nvim "~/config/kitty/kitty.conf"
 map cmd+, launch --allow-remote-control --title="kitty.conf" --type=tab sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#38F273" active_fg="#050F63" inactive_fg="#38F273" inactive_bg="#030D43"; exec /opt/homebrew/bin/nvim ~/config/kitty/kitty.conf'
-map kitty_mod+0 launch --hold env PATH="/opt/homebrew/bin:$PATH" sh -c 'media search'
-map kitty_mod+1 launch --hold env PATH="/opt/homebrew/bin:$PATH" sh -c 'fzf-tablature'
+map cmd+\ launch --location=neighbor --cwd=current sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#44F2F3" active_fg="#050F63" inactive_fg="#44F2F3" inactive_bg="#030D43"; exec yazi'
+map kitty_mod+0 launch --hold env PATH="/opt/homebrew/bin:~/.bin/~/.zsh/bin/:$PATH" sh -c 'media search'
+map kitty_mod+1 launch --hold env PATH="/opt/homebrew/bin:~/.bin/~/.zsh/bin/:$PATH" sh -c 'fzf-tablature'
 map ctrl+t>1 launch --type=background sh -c 'kitty @ set-tab-color --match id:$KITTY_WINDOW_ID active_bg=#FFA500'
 map cmd+ctrl+, debug_config
 map cmd+shift+g show_last_command_output
-map ctrl+\ launch --location=neighbor --cwd=current yazi
 map ctrl+cmd+[ move_tab_backward
 map ctrl+cmd+] move_tab_forward
 map ctrl+h neighboring_window left
