--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -94,7 +94,7 @@ map kitty_mod+f6 debug_config
 map kitty_mod+left previous_tab
 map kitty_mod+m combine : toggle_marker text 1 ❯ : copy_to_clipboard
 map kitty_mod+p>f kitten hints --type path --program -
-map kitty_mod+r launch --type=background --cwd=current open --reveal .
+#map kitty_mod+ctrl+r launch --type=background --cwd=current open --reveal $PWD
 map kitty_mod+right next_tab
 map kitty_mod+shift+, load_config_file
 map kitty_mod+shift+- set_background_opacity -0.1
@@ -125,6 +125,42 @@ map cmd+l send_text all \x1bl
 map cmd+backspace send_text all \x15
 map cmd+shift+b launch --type=tab btm
 map cmd+shift+y launch --type=tab yazi
+
+map cmd+r combine : send_key ctrl+alt+r
+map cmd+p combine : send_key ctrl+alt+p
+
+# map cmd+@ send_text all \x00
+# map cmd+a send_text all \x01
+# map cmd+b send_text all \x02
+# map cmd+c send_text all \x03
+# map cmd+d send_text all \x04
+# map cmd+e send_text all \x05
+# map cmd+f send_text all \x06
+# map cmd+g send_text all \x07
+# map cmd+h send_text all \x08
+# map cmd+i send_text all \x09
+# map cmd+j send_text all \x0A
+# map cmd+k send_text all \x0B
+# map cmd+l send_text all \x0C
+# map cmd+m send_text all \x0D
+# map cmd+n send_text all \x0E
+# map cmd+o send_text all \x0F
+# map cmd+p send_text all \x10
+# map cmd+q send_text all \x11
+# map cmd+r send_text all \x12
+# map cmd+s send_text all \x13
+# map cmd+t send_text all \x14
+# map cmd+u send_text all \x15
+# map cmd+v send_text all \x16
+# map cmd+w send_text all \x17
+# map cmd+x send_text all \x18
+# map cmd+y send_text all \x19
+# map cmd+z send_text all \x1A
+# map cmd+[ send_text all \x1B
+# map cmd+\ send_text all \x1C
+# map cmd+] send_text all \x1D
+# map cmd+^ send_text all \x1E
+# map cmd+_ send_text all \x1F
 
 # THEME
 #include themes/1984-dark
