--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -37,19 +37,19 @@ s cycle sub
 # Random clip
 SHIFT+Enter script-binding play-random
 
-#Shift+J script-binding jump-to-random-file
-#Shift+J script-message-to playlist_manager random
+l seek 5 relative-percent
+Shift+l seek 20 relative-percent
+# alt+l frame-step
 
-l seek 3 exact
-Shift+L seek 10 exact
-Ctrl+l seek 20 exact
+h seek -5 relative-percent
+Shift+h seek -20 relative-percent
+# alt+h frame-back-step
 
-h seek -3 exact
-Shift+H seek -10 exact
-Ctrl+h seek -20 exact
+alt+l set pause yes; frame-step
+alt+h set pause yes; frame-back-step
 
 # Skip to the next clip
-ENTER playlist-next
+# ENTER playlist-next
 Meta+RIGHT playlist-next
 
 # Skip to the previous clip
@@ -76,3 +76,7 @@ Shift+RIGHT add chapter 1
 
 # Open parent dir in kitty and launch lf
 Ctrl+k script_binding open_in_kitty
+
+ENTER script_binding random_playlist_jump
+a script_binding toggle_auto_jump
+j script_binding random_seek_within_file
