--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,7 +2,7 @@ kitty_mod cmd
 shell zsh
 editor nvim
 allow_remote_control yes
-listen_on unix:/tmp/kitty-socket
+# listen_on unix:/tmp/kitty-socket
 env PATH=/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:$HOME/.zsh/bin:$HOME/.bin:$PATH
 exe_search_path +$HOME/.zsh/bin
 
