--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -42,7 +42,7 @@ tab_switch_strategy previous
 tab_bar_margin_width 20.0
 tab_activity_symbol !
 tab_fade 0
-tab_title_template " {title.split(' ').last().split('/')[-1].strip().lower()[:8]}{sup.index} "
+tab_title_template " {title.split(' ').last().split('/')[-1].strip().lower()[:12]}{sup.index} "
 
 # COLORS
 foreground #ddddfd
@@ -67,7 +67,6 @@ draw_minimal_borders yes
 # KEYBINDINGS
 map kitty_mod+a set_tab_color #FFA500
 map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
-#map cmd+, launch --title "kitty.conf" --type=tab /opt/homebrew/bin/nvim "~/config/kitty/kitty.conf"
 map cmd+, launch --allow-remote-control --title="kitty.conf" --type=tab sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#38F273" active_fg="#050F63" inactive_fg="#38F273" inactive_bg="#030D43"; exec /opt/homebrew/bin/nvim ~/config/kitty/kitty.conf'
 map cmd+\ launch --location=neighbor --cwd=current sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#44F2F3" active_fg="#050F63" inactive_fg="#44F2F3" inactive_bg="#030D43"; exec yazi'
 map kitty_mod+0 launch --hold env PATH="/opt/homebrew/bin:~/.bin/~/.zsh/bin/:$PATH" sh -c 'media search'
@@ -81,6 +80,12 @@ map ctrl+h neighboring_window left
 map ctrl+j neighboring_window down
 map ctrl+k neighboring_window up
 map ctrl+l neighboring_window right
+# CMD+B send buffer to nvim
+map kitty_mod+b launch --type=overlay --stdin-source=@screen_scrollback nvim -
+# CMD+/ Search in scrollback with vim
+map kitty_mod+/ launch --type=overlay --stdin-source=@screen_scrollback nvim -c 'set nomod' -c 'set ro'
+# CMD+Y Copy mode with vim bindings
+map kitty_mod+y kitten hints --type regex --regex '\S+' --program @
 map kitty_mod+h neighboring_window left
 map kitty_mod+j neighboring_window down
 map kitty_mod+k neighboring_window up
