--- a/apps/yazi/yazi.toml
+++ b/apps/yazi/yazi.toml
@@ -45,6 +45,7 @@ show_table_properties = true
 [opener]
 edit = [
 	{ run = '${EDITOR:-vi} "$@"', desc = "$EDITOR", block = true, for = "unix" },
+	{ run = 'hx "$@"', desc = "helix", block = true, for = "unix" },
 	{ run = 'code %*',    orphan = true, desc = "code",           for = "windows" },
 	{ run = 'code -w %*', block = true,  desc = "code (block)",   for = "windows" },
 ]
