--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -99,7 +99,7 @@ map kitty_mod+f6 debug_config
 map kitty_mod+left previous_tab
 map kitty_mod+m combine : toggle_marker text 1 ❯ : copy_to_clipboard
 map kitty_mod+p>f kitten hints --type path --program -
-#map kitty_mod+ctrl+r launch --type=background --cwd=current open --reveal $PWD
+map kitty_mod+r launch --type=background --cwd=current open --reveal $PWD
 map kitty_mod+right next_tab
 map kitty_mod+shift+, load_config_file
 map kitty_mod+shift+- set_background_opacity -0.1
