--- a/helix/config.toml
+++ b/helix/config.toml
@@ -22,6 +22,8 @@ V = ["goto_line_start", "select_mode", "goto_line_end"]
 Q = ":wq!"
 C-f = [":new", ":insert-output lf-pick", ":theme default", "select_all", "split_selection_on_newline", "goto_file", "goto_last_modified_file", ":buffer-close!", ":theme tokyonight_storm"]
 backspace = "goto_last_accessed_file"
+p = [":clipboard-paste-after"]
+P = [":clipboard-paste-before"]
 
 [keys.insert]
 C-s = [":write", "normal_mode"]
@@ -33,6 +35,7 @@ C-n = ["move_line_down", "scroll_down"]
 "}" = ["goto_next_paragraph"]
 H = ["goto_line_start"]
 L = ["goto_line_end"]
+y = [":clipboard-yank"]
 
 [editor.cursor-shape]
 insert = "bar"
