--- a/helix/config.toml
+++ b/helix/config.toml
@@ -9,21 +9,38 @@ C-j = "jump_view_down"
 C-k = "jump_view_up"
 C-l = "jump_view_right"
 C-p = ["move_line_up", "scroll_up"]
-C-n = ["move_line_down", "scroll_down"]
 C-s = [":w!"]
+C-n = ["move_line_down", "scroll_down"]
 esc = ["collapse_selection", "keep_primary_selection"]
-D = ["insert_mode", "kill_to_line_end", "normal_mode"]
 H = ["goto_line_start"]
+D = ["insert_mode", "kill_to_line_end", "normal_mode"]
 0 = ["goto_line_start"]
 L = ["goto_line_end"]
-V = ["goto_line_start", "select_mode", "goto_line_end"]
+V = ["extend_line", "select_mode"]
 "{" = ["goto_prev_paragraph"]
 "}" = ["goto_next_paragraph"]
 Q = ":wq!"
-C-f = [":new", ":insert-output lf-pick", ":theme default", "select_all", "split_selection_on_newline", "goto_file", "goto_last_modified_file", ":buffer-close!", ":theme tokyonight_storm"]
+#C-f = [":new", ":insert-output lf-pick", ":theme default", "select_all", "split_selection_on_newline", "goto_file", "goto_last_modified_file", ":buffer-close!", ":theme tokyonight_storm"]
 backspace = "goto_last_accessed_file"
 p = [":clipboard-paste-after"]
 P = [":clipboard-paste-before"]
+# Move current line down (Shift+J)
+"J" = [
+  "extend_line",       # select the current line
+  "delete_selection",  # cut it
+  "paste_after",       # drop it one line down
+  "collapse_selection" # reset the selection so you can do it again
+]
+
+# Move current line up (Shift+K)
+"K" = [
+  "extend_line",         # select the current line
+  "delete_selection",    # cut it
+  "move_line_up",        # go up to the line above
+  "move_line_up",        # (extra so you land above the right spot)
+  "paste_after",         # paste here
+  "collapse_selection"   # reset the selection for the next repeat
+]
 
 [keys.insert]
 C-s = [":write", "normal_mode"]
@@ -36,6 +53,8 @@ C-n = ["move_line_down", "scroll_down"]
 H = ["goto_line_start"]
 L = ["goto_line_end"]
 y = ["yank", ":clipboard-yank", "collapse_selection"]
+"J" = ["delete_selection", "paste_after"]
+"K" = ["delete_selection", "move_visual_line_up", "paste_before"]
 
 [editor.cursor-shape]
 insert = "bar"
