--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,6 +5,7 @@ allow_remote_control yes
 # listen_on unix:/tmp/kitty-socket
 env PATH=/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:$HOME/.zsh/bin:$HOME/.bin:$PATH
 exe_search_path +$HOME/.zsh/bin
+mouse_hide_wait 0.0
 
 # APPEARANCE
 font_family JetBrainsMono Nerd Font Mono
