--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
 kitty_mod cmd
 shell zsh
-editor nvim
+editor hx
 allow_remote_control yes
 # listen_on unix:/tmp/kitty-socket
 env PATH=/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:$HOME/.zsh/bin:$HOME/.bin:$PATH
