--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -87,6 +87,8 @@ map kitty_mod+b launch --type=overlay --stdin-source=@screen_scrollback nvim -
 map kitty_mod+/ launch --type=overlay --stdin-source=@screen_scrollback nvim -c 'set nomod' -c 'set ro'
 # CMD+Y Copy mode with vim bindings
 map kitty_mod+y kitten hints --type regex --regex '\S+' --program @
+map ctrl+h send_text all \x1b[104;9u
+map kitty_mod+i send_text all \x1b[105;9u
 map kitty_mod+h neighboring_window left
 map kitty_mod+j neighboring_window down
 map kitty_mod+k neighboring_window up
