--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -24,6 +24,8 @@ p script-binding show-minimal-playlist
 # Interpolation toggle
 # i cycle interpolation
 # V cycle-values osd-msg3 "${path}\n${width}x${height} ${video-bitrate} ${video-codec} @ ${fps}fps\n${file-size}" ""
+Ctrl+I cycle interpolation ; show-text "interpolation: ${interpolation}"
+Ctrl+T cycle-values tscale oversample mitchell box ; show-text "tscale=${tscale}"
 
 / show-text "${metadata/title:}\n${?gt(width,height):${width}:${height}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
 
