--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -8,15 +8,15 @@ profile=fast
 video-sync=display-resample
 
 # Use libplacebo backend explicitly (better performance on macOS)
-#vo=gpu-next
+vo=gpu-next
 #gpu-api=next
 
 # Frame interpolation settings (stable macOS-specific choice)
-video-sync=audio
+video-sync=display-resample
 interpolation=yes
-tscale=oversample
+tscale=mitchell
 tscale-window=quadric
-tscale-radius=1.0
+#tscale-radius=1.0
 
 # Conservative scalers (critical!)
 scale=bilinear
