--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -89,6 +89,16 @@ key = "N"
 mods = "Command"
 action = "CreateNewWindow"
 
+# [[keyboard.bindings]]
+# key = "C"
+# mods = "Command"
+# action = "ReceiveChar"
+
+# [[keyboard.bindings]]
+# key = "V"
+# mods = "Command"
+# action = "ReceiveChar"
+
 [[keyboard.bindings]]
 key = "O"
 mods = "Command"
