--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -77,17 +77,17 @@ map cmd+ctrl+, debug_config
 map cmd+shift+g show_last_command_output
 map ctrl+cmd+[ move_tab_backward
 map ctrl+cmd+] move_tab_forward
-map ctrl+h neighboring_window left
-map ctrl+j neighboring_window down
-map ctrl+k neighboring_window up
-map ctrl+l neighboring_window right
+#map ctrl+h neighboring_window left
+#map ctrl+j neighboring_window down
+#map ctrl+k neighboring_window up
+#map ctrl+l neighboring_window right
 # CMD+B send buffer to nvim
 map kitty_mod+b launch --type=overlay --stdin-source=@screen_scrollback nvim -
 # CMD+/ Search in scrollback with vim
 map kitty_mod+/ launch --type=overlay --stdin-source=@screen_scrollback nvim -c 'set nomod' -c 'set ro'
 # CMD+Y Copy mode with vim bindings
 map kitty_mod+y kitten hints --type regex --regex '\S+' --program @
-map ctrl+h send_text all \x1b[104;9u
+#map ctrl+h send_text all \x1b[104;9u
 map kitty_mod+i send_text all \x1b[105;9u
 map kitty_mod+h neighboring_window left
 map kitty_mod+j neighboring_window down
