--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -52,11 +52,11 @@ alt+h set pause yes; frame-back-step
 
 # Skip to the next clip
 # ENTER playlist-next
-Meta+RIGHT playlist-next
+] playlist-next
 
 # Skip to the previous clip
 Shift+ENTER playlist-prev
-Meta+LEFT playlist-prev
+[ playlist-prev
 k playlist-prev
 
 # Reveal the currently playing file in finder
