--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -44,7 +44,7 @@ Shift+l seek 20 relative-percent
 # alt+l frame-step
 
 h seek -5 relative-percent
-Shift+h seek -20 relative-percent
+\ seek 15 relative-percent
 # alt+h frame-back-step
 
 alt+l set pause yes; frame-step
