--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,7 +2,7 @@ kitty_mod cmd
 shell zsh
 editor hx
 allow_remote_control yes
-# listen_on unix:/tmp/kitty-socket
+listen_on unix:/tmp/kitty
 env PATH=/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:$HOME/.zsh/bin:$HOME/.bin:$PATH
 exe_search_path +$HOME/.zsh/bin
 mouse_hide_wait 0.0
