--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -42,7 +42,7 @@ tab_switch_strategy previous
 tab_bar_margin_width 20.0
 tab_activity_symbol !
 tab_fade 0
-tab_title_template " {title.split(' ').last().split('/')[-1].strip().lower()[:12]}{sup.index} "
+tab_title_template "{title.split('/')[-1][:12]}{sup.index}"
 
 # COLORS
 foreground #ddddfd
