--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -80,5 +80,5 @@ Shift+RIGHT add chapter 1
 Ctrl+k script_binding open_in_kitty
 
 ENTER script_binding random_playlist_jump
-a script_binding toggle_auto_jump
+J script_binding toggle_auto_jump
 j script_binding random_seek_within_file
