--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -83,7 +83,9 @@ ENTER script_binding random_playlist_jump
 1 script_binding toggle_auto_jump
 j script_binding random_seek_within_file
 
-3 script-message-to autorotate toggle
+3 script-message-to auto-rotate toggle
 
 o script-binding select/select-playlist
 b script-binding select/select-binding
+
+b script-message-to metadata toggle
