--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -89,3 +89,5 @@ o script-binding select/select-playlist
 b script-binding select/select-binding
 
 b script-message-to metadata toggle
+
+m script-binding quick-menu/show-menu
