--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -90,4 +90,4 @@ b script-binding select/select-binding
 
 b script-message-to metadata toggle
 
-m script-binding quick-menu/show-menu
+m script-binding show-menu
