--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -36,7 +36,8 @@ loop-playlist=inf
 force-window=immediate
 
 # On-Screen Display (OSD)
-osd-font="JetBrainsMono Nerd Font Mono"
+osd-font="Monaco"
+sub-font='Hack Nerd Font'
 osd-font-size=14
 osd-bold=yes
 osd-color="#FFFFFF"
