--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,7 +8,7 @@ exe_search_path +$HOME/.zsh/bin
 mouse_hide_wait 0.0
 
 # APPEARANCE
-font_family JetBrainsMono Nerd Font Mono
+# font_family JetBrainsMono Nerd Font Mono
 font_size 14
 cursor_shape block
 cursor_blink_interval 0.5
@@ -172,3 +172,11 @@ map cmd+p combine : send_key ctrl+alt+p
 
 # THEME
 #include themes/1984-dark
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="Monaco"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
