--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -69,4 +69,4 @@ slang=en
 mute=yes
 
 # Optional IPC for scripts (uncomment if using scripts/remote control)
-#input-ipc-server=/tmp/mpv-socket
+input-ipc-server=/tmp/mpv-socket
