--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,6 +6,7 @@ listen_on unix:/tmp/kitty-$USER
 env PATH=/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:$HOME/.zsh/bin:$HOME/.bin:$PATH
 exe_search_path +$HOME/.zsh/bin
 mouse_hide_wait 0.0
+confirm_os_window_close 0
 
 # APPEARANCE
 # font_family JetBrainsMono Nerd Font Mono
