--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -69,10 +69,10 @@ draw_minimal_borders yes
 # KEYBINDINGS
 # map kitty_mod+a set_tab_color #FFA500
 map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
-map cmd+, launch --allow-remote-control --title="kitty.conf" --type=tab sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#44F273" active_fg="#050F63" inactive_fg="#38F273" inactive_bg="#030D43"; exec /opt/homebrew/bin/nvim ~/config/kitty/kitty.conf'
+map cmd+, launch --allow-remote-control --title="kitty.conf" --type=tab sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#44F273" active_fg="#050F63" inactive_fg="#38F273" inactive_bg="#030D43"; exec /opt/homebrew/bin/hx ~/config/kitty/kitty.conf'
 map cmd+\ launch --location=neighbor --cwd=current sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#44F2F3" active_fg="#050F63" inactive_fg="#44F2F3" inactive_bg="#030D43"; exec yazi'
-map kitty_mod+0 launch --hold env PATH="/opt/homebrew/bin:~/.bin/~/.zsh/bin/:$PATH" sh -c 'media search'
-map kitty_mod+1 launch --hold env PATH="/opt/homebrew/bin:~/.bin/~/.zsh/bin/:$PATH" sh -c 'fzf-tablature'
+map kitty_mod+0 launch --type=background env PATH="$PATH" sh -c 'kitty @ set-tab-color --match title:"mpv" active_bg="#A442F3" active_fg="#050F63" inactive_fg="#A442F3" inactive_bg="#030D43" && exec ls-media | mpv-play'
+map kitty_mod+9 launch --title="mpv:all" --type=tab env PATH="$PATH" sh -c 'env PATH="$PATH" kitty @ set-tab-color --match title:"mpv" active_bg="#A442F3" active_fg="#050F63" inactive_fg="#A442F3" inactive_bg="#030D43" && exec ls-media | mpv-select'
 map ctrl+t>1 launch --type=background sh -c 'kitty @ set-tab-color --match id:$KITTY_WINDOW_ID active_bg=#FFA500'
 map cmd+ctrl+, debug_config
 map cmd+shift+g show_last_command_output
