--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -36,6 +36,7 @@ loop-playlist=inf
 force-window=immediate
 
 # On-Screen Display (OSD)
+osd=no
 osd-font="JetBrainsMono Nerd Font Mono"
 osd-font-size=14
 osd-bold=yes
