--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -44,7 +44,7 @@ tab_switch_strategy previous
 tab_bar_margin_width 20.0
 #tab_activity_symbol 󰧞
 tab_fade 0
-tab_title_template " {title.split('/')[-1][:12]}{sup.index} "
+tab_title_template "   {title.split('/')[-1][:24]}{sup.index} "
 
 # COLORS
 foreground #ddddfd
