--- a/mpv/lua-settings/mpv_thumbnail_script.conf
+++ b/mpv/lua-settings/mpv_thumbnail_script.conf
@@ -3,12 +3,11 @@
 # and on other platforms to /tmp/mpv_thumbs_cache.
 # The directory will be created automatically, but must be writeable!
 # Use absolute paths, and take note that environment variables like %TEMP% are unsupported (despite the default)!
-cache_directory=/tmp/my_mpv_thumbnails
-# THIS IS NOT A WINDOWS PATH. COMMENT IT OUT OR ADJUST IT YOURSELF.
+cache_directory=/Users/nom/.cache/mpv
 
 # Whether to generate thumbnails automatically on video load, without a keypress
 # Defaults to yes
-autogenerate=[yes/no]
+autogenerate=yes
 
 # Only automatically thumbnail videos shorter than this (in seconds)
 # You will have to press T (or your own keybind) to enable the thumbnail previews
@@ -20,16 +19,16 @@ autogenerate_max_duration=3600
 # ffmpeg is slightly faster than mpv but lacks support for ordered chapters in MKVs,
 # which can break the resulting thumbnails. You have been warned.
 # Defaults to yes (don't use ffmpeg)
-prefer_mpv=[yes/no]
+prefer_mpv=no
 
 # Explicitly disable subtitles on the mpv sub-calls
 # mpv can and will by default render subtitles into the thumbnails.
 # If this is not what you wish, set mpv_no_sub to yes
 # Defaults to no
-mpv_no_sub=[yes/no]
+mpv_no_sub=yes
 
 # Enable to disable the built-in keybind ("T") to add your own, see after the block
-disable_keybinds=[yes/no]
+disable_keybinds=no
 
 # The maximum dimensions of the thumbnails, in pixels
 # Defaults to 200 and 200
@@ -38,7 +37,7 @@ thumbnail_height=200
 
 # The thumbnail count target
 # (This will result in a thumbnail every ~10 seconds for a 25 minute video)
-thumbnail_count=150
+thumbnail_count=100
 
 # The above target count will be adjusted by the minimum and
 # maximum time difference between thumbnails.
@@ -58,7 +57,7 @@ max_delta=90
 
 # Allow thumbnailing network paths (naive check for "://")
 # Defaults to no
-thumbnail_network=[yes/no]
+thumbnail_network=no
 # Override thumbnail count, min/max delta, as above
 remote_thumbnail_count=60
 remote_min_delta=15
@@ -67,4 +66,4 @@ remote_max_delta=120
 # Try to grab the raw stream and disable ytdl for the mpv subcalls
 # Much faster than passing the url to ytdl again, but may cause problems with some sites
 # Defaults to yes
-remote_direct_stream=[yes/no]
+remote_direct_stream=yes
