--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -44,7 +44,7 @@ tab_switch_strategy previous
 tab_bar_margin_width 20.0
 #tab_activity_symbol 󰧞
 tab_fade 0
-tab_title_template "   {title.split('/')[-1][:24]}{sup.index} "
+tab_title_template " {title.split('/')[-1][:24]}{sup.index} "
 
 # COLORS
 foreground #ddddfd
@@ -71,6 +71,7 @@ draw_minimal_borders yes
 map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
 map cmd+, launch --allow-remote-control --title="kitty.conf" --type=tab sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#44F273" active_fg="#050F63" inactive_fg="#38F273" inactive_bg="#030D43"; exec /opt/homebrew/bin/hx ~/config/kitty/kitty.conf'
 map cmd+\ launch --location=neighbor --cwd=current sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#44F2F3" active_fg="#050F63" inactive_fg="#44F2F3" inactive_bg="#030D43"; exec yazi'
+map cmd+r, launch --type=background --cwd=current open --reveal {}
 map kitty_mod+0 launch --type=background env PATH="$PATH" sh -c 'kitty @ set-tab-color --match title:"mpv" active_bg="#A442F3" active_fg="#050F63" inactive_fg="#A442F3" inactive_bg="#030D43" && exec ls-media | mpv-play'
 map kitty_mod+9 launch --title="mpv:all" --type=tab env PATH="$PATH" sh -c 'env PATH="$PATH" kitty @ set-tab-color --match title:"mpv" active_bg="#A442F3" active_fg="#050F63" inactive_fg="#A442F3" inactive_bg="#030D43" && exec ls-media | mpv-select'
 map ctrl+t>1 launch --type=background sh -c 'kitty @ set-tab-color --match id:$KITTY_WINDOW_ID active_bg=#FFA500'
