--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -91,3 +91,8 @@ b script-binding select/select-binding
 b script-message-to metadata toggle
 
 m script-binding show-menu
+
+# Toggle fullscreen with ⌘ + F
+Meta+f toggle fullscreen
+
+ESC script-message-to osc visible no
